# sus

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
sus_cli/: Cargo.toml
sus_cli/src/: main.rs
sus_site/static/: index.html
