[package]
edition = "2021"
description = "CLI for generating lists of hosts to block"
license = "MIT OR Apache-2.0"
name = "sus_cli"
publish = false
version = "0.1.0"

[[bin]]
name = "sus"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.4.7", features = ["env", "derive"] }
itertools = "0.12.1"
ls_rules = "0.4.0"
serde_json = "1.0.108"
